--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "apollo-boost": "0.3.1",
     "axios": "^0.19.0",
     "expo": "^32.0.0",
+    "graphql": "^14.3.1",
     "native-base": "^2.12.1",
     "ramda": "^0.26.1",
     "react": "16.5.0",
+    "react-apollo": "^2.5.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.1",
     "react-navigation": "^3.11.0",
